# custom-emulator

./: CMakeLists.txt  cpu.h  main.c  microcode.rom  microcode.txt  program.rom  truth_table_export.txt  truthtable_example.txt  ui.c  ui.h
lib/Nuklear/: nuklear.h
